--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,8 @@
           <!-- sub menu -->
           <ul class="navbar navbar-default" role="navigation">
             <div class="navbar-header navbar-right">
-              <a class="nav navbar-brand" href="/">Ö÷Ò³</a>
-              <a class="nav navbar-brand" href="/about">¹ØÓÚ</a>
+              <a class="nav navbar-brand" href="/">Home</a>
+              <a class="nav navbar-brand" href="/about">About</a>
 
               &nbsp;&nbsp;&nbsp;
             </div>
