--- a/_includes/sider.html
+++ b/_includes/sider.html
@@ -14,6 +14,6 @@
     <hr>
       <li class="nav-header"><big><b>Links</b></big></li>
 
-    <li><a href="https://www.junchaowang.com">Mark's Blog</a></li>
+    <li><a href="https://www.junchaowang.com">马明的博客</a></li>
   </ul>
 </div>
