--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,4 +1,4 @@
-<p align="right"><b>±êÇ©</b>:
+<p align="right"><b>æ ‡ç­¾</b>:
 {% if post.tags %}
 	{% for tag in post.tags %}
     	<a class="label label-info" href="{{ site.baseurl }}/tags#{{ tag }}" title="View posts tagged with &quot;{{ tag }}&quot;">{{ tag }}</a>
