--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
       <div class="container-fluid" id="LG">
         <div class="row-fluid">
           <div class="col-xs-10 span9">
-            <h3 class="text-right">
-              <strong><a href="{{ site.url }}">{{ site.title }}</a></strong>
+            <h3 class="text-center">
+              <strong style="color:#23527C">{{ site.title }}</strong>
             </h3>
           </div>
           <div class="col-xs-2 span3">
@@ -16,7 +16,7 @@
         <div class="col-xs-10 span9">
           <!-- sub menu -->
           <ul class="navbar navbar-default" role="navigation">
-            <div class="navbar-header navbar-right">
+            <div class="navbar-header navbar-left">
               <a class="nav navbar-brand" href="/">首页</a>
               <a class="nav navbar-brand" href="/about">关于</a>
 
