--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
               <strong style="color:#23527C">{{ site.title }}</strong>
             </h3>
           </div>
-          <div class="col-xs-2 span3">
+          <div class="col-xs-2 span3 text-center">
             <img alt="Renge" height="60" src="/images/Header.jpg" class="img-circle miaopasi" /></div>
         </div>
       </div>
