--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- footer -->
 <div class="col-xs-12 span9">
   <p class="text-center">
-    <span id="busuanzi_container_site_pv">ฑพีพืÜทรฮสมฟ<span id="busuanzi_value_site_pv"></span>ดฮ</span>
+    <span id="busuanzi_container_site_pv">ๆฌ็ซๆ€ป่ฎฟ้—ฎ้<span id="busuanzi_value_site_pv"></span>ๆฌก</span>
   </p>
 </div>
 </div>
