--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,10 @@
 <!-- footer -->
 <div class="col-xs-12 span9">
   <p class="text-center">
-    <span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
+    ©2020 马明的博客
   </p>
 </div>
 </div>
 </div>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
-<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
