--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- footer -->
 <div class="col-xs-12 span9">
   <p class="text-center">
-    ©2020 马明的博客
+    ©2020 马明的技术博客
   </p>
 </div>
 </div>
