--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,5 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
+  <script type="text/javascript" src="https://v1.cnzz.com/z_stat.php?id=1278708418&web_id=1278708418"></script>
 </head>
