修改访问量

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <div class="col-xs-12 span9">
   <p class="text-center">
     ©2020 马明的技术博客
-	<!--<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278708418'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278708418%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>-->
+	<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278708418'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278708418%26online%3D1' type='text/javascript'%3E%3C/script%3E"));</script>
 	<span id="busuanzi_container_site_pv" style="display: inline;">
             总访问量<span id="busuanzi_value_site_pv"></span>次
             访客数<span id="busuanzi_value_site_uv"></span>人次
