--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- footer -->
-<div class="col-xs-12 span9">
-  <p class="text-center">
+<div class="col-xs-10 span9">
+  <p class="text-center" style="margin:30px 0px">
     ©2020 马明的技术博客
 	<span id="busuanzi_container_site_pv" style="display: inline;">
             <span id="busuanzi_container_site_pv">
