--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,11 @@
     ©2020 马明的技术博客
 	<span id="busuanzi_container_site_pv" style="display: inline;">
             <span id="busuanzi_container_site_pv">
-				本站总访问量<span id="busuanzi_value_site_pv"></span>次
+				本站总访问量<span id="busuanzi_value_site_pv" style="color:#3391D1;padding:0px 5px;"></span>次
 			</span>
 
 			<span id="busuanzi_container_site_uv">
-			  本站访客数<span id="busuanzi_value_site_uv"></span>人次
+			  本站访客数<span id="busuanzi_value_site_uv" style="color:#3391D1;padding:0px 5px;"></span>人次
 			</span>
     </span>
 	<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278708418'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278708418%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
