--- a/_includes/sider.html
+++ b/_includes/sider.html
@@ -12,10 +12,16 @@
         <big><a class="label label-info" href="/tags/#{{ tag[0] }}">{{ tag[0] }}</a></big>
     {% endfor %}
     <hr>
+
+     
+
       <!--
 	  	<li class="nav-header"><big><b>连接</b></big></li>
 
 		<li><a href="https://www.junchaowang.com">马明的博客</a></li>
 	  -->
+
+	  <div style="width:180px;height:180px;backgroud:url('/images/Javaweb.png') no-repeat left top">
+	  <div>
 	 </ul>
 </div>
