--- a/_includes/sider.html
+++ b/_includes/sider.html
@@ -21,7 +21,7 @@
 		<li><a href="https://www.junchaowang.com">马明的博客</a></li>
 	  -->
 
-	  <div style="width:180px;height:180px;background:url('/images/Javaweb.png') no-repeat left top">
+	  <div style="width:180px;height:200px;background:url('/images/Javaweb.png') no-repeat center;background-size: 100%;margin-left:-20px">
 	  <div>
 	 </ul>
 </div>
