--- a/_includes/sider.html
+++ b/_includes/sider.html
@@ -21,7 +21,7 @@
 		<li><a href="https://www.junchaowang.com">马明的博客</a></li>
 	  -->
 	  <li class="nav-header"><big><b>技术交流群</b></big></li>
-	  <div style="width:180px;height:180px;background:url('/images/Javaweb.png') no-repeat center;background-size: 100%">
+	  <div style="width:130px;height:130px;background:url('/images/Javaweb.png') no-repeat center;background-size: 100%;margin-left:-10px;">
 	  <div>
 	 </ul>
 </div>
