--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,17 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
   <script async="" src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+  <script src="http://static.tctip.com/js/tctip.min.js" />
+  <script>
+    window.tctipConfig = {
+            staticPrefix: "http://static.tctip.com",
+            buttonImageId: 5,
+            buttonTip:    "dashang",
+            list:{
+                alipay: { qrimg: "http://images.cnblogs.com/cnblogs_com/jackson0714/809472/o_alipay_dashang.png"},
+                weixin: { qrimg: "http://images.cnblogs.com/cnblogs_com/jackson0714/809472/o_weixin_dashang.png"},
+            }
+        };
+</script>
+
 </head>
