--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="{{ "/css/renge.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="stylesheet" href="/css/shang.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <!--[if lt IE 9]>
@@ -13,17 +14,4 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
   <script async="" src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-  <script src="http://static.tctip.com/js/tctip.min.js" />
-  <script>
-    window.tctipConfig = {
-            staticPrefix: "http://static.tctip.com",
-            buttonImageId: 5,
-            buttonTip:    "dashang",
-            list:{
-                alipay: { qrimg: "http://images.cnblogs.com/cnblogs_com/jackson0714/809472/o_alipay_dashang.png"},
-                weixin: { qrimg: "http://images.cnblogs.com/cnblogs_com/jackson0714/809472/o_weixin_dashang.png"},
-            }
-        };
-</script>
-
 </head>
