--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,11 +10,12 @@ layout: default
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
-	
+  </div>
 
-	<div class="page-reward" style="margin-top:500px;">
-          <a href="javascript:;" class="page-reward-btn tooltip-top">
-            <div class="tooltip tooltip-east">
+
+  <div class="page-reward">
+    <a href="javascript:;" class="page-reward-btn tooltip-top">
+        <div class="tooltip tooltip-east">
             <span class="tooltip-item">
               赏
             </span>
@@ -39,12 +40,11 @@ layout: default
                 </span>
               </span>
             </span>
-          </div>
-          </a>
         </div>
+    </a>
+ </div>
 
 
-  </div>
   {% include tags.html %}
 
 </article>
