--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,13 +26,13 @@ layout: default
                   <div class="reward-box">
                     
                     <div class="reward-box-item">
-                      <img class="reward-img" src="alisq.png">
+                      <img class="reward-img" src="/images/alisq.png">
                       <span class="reward-type">支付宝</span>
                     </div>
                     
                     
                     <div class="reward-box-item">
-                      <img class="reward-img" src="wxsq.png">
+                      <img class="reward-img" src="/images/wxsq.png">
                       <span class="reward-type">微信</span>
                     </div>
                     
