--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,38 +12,15 @@ layout: default
     {{ content }}
   </div>
 
-
-  <div class="page-reward">
-    <a href="javascript:;" class="page-reward-btn tooltip-top">
-        <div class="tooltip tooltip-east">
-            <span class="tooltip-item">
-              赏
-            </span>
-            <span class="tooltip-content">
-              <span class="tooltip-text">
-                <span class="tooltip-inner">
-                  <p class="reward-p"><i class="icon icon-quo-left"></i>谢谢你请我喝咖啡<i class="icon icon-quo-right"></i></p>
-                  <div class="reward-box">
-                    
-                    <div class="reward-box-item">
-                      <img class="reward-img" src="/images/alisq.png">
-                      <span class="reward-type">支付宝</span>
-                    </div>
-                    
-                    
-                    <div class="reward-box-item">
-                      <img class="reward-img" src="/images/wxsq.png">
-                      <span class="reward-type">微信</span>
-                    </div>
-                    
-                  </div>
-                </span>
-              </span>
-            </span>
-        </div>
-    </a>
+  <div class="reward plxiaoshi" style="margin-top:200px;">
+	<div class="reward-button">
+		<img class="aligncenter size-medium box-hide box-show" src="/images/shang.png">
+		<span class="reward-code"><img src="/images/dashangerweima.jpg"></span>
+	</div>
+	<p class="reward-notice">
+		如果文章对你有帮助，请赞赏支持懿古今发展！
+	</p>
  </div>
-
 
   {% include tags.html %}
 
