--- a/css/shang.css
+++ b/css/shang.css
@@ -1,162 +1,41 @@
-.page-reward {
-    margin: 60px 0;
+.reward {
+    padding: 5px 0
+}
+
+.reward .reward-notice {
+    font-size: 1pc;
+    line-height: 1pc;
+    margin: 15px auto;
     text-align: center
 }
 
-.page-reward .page-reward-btn {
+.reward .reward-button {
+    line-height: 60px;
     position: relative;
-    display: inline-block;
-    width: 56px;
-    height: 56px;
-    line-height: 56px;
-    font-size: 20px;
-    color: #fff;
-    background: #f44336;
-    border-radius: 50%;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-    transition: .4s ease-in-out
+    width: 108px;
+    margin: 0 auto;
 }
 
-.page-reward .page-reward-btn:active, .page-reward .page-reward-btn:hover {
-    box-shadow: 0 6px 12px rgba(0, 0, 0, .2), 0 4px 15px rgba(0, 0, 0, .2)
-}
-
-.page-reward .page-reward-btn .tooltip-item {
-    display: block;
-    width: 56px;
-    height: 56px
-}
-
-.page-reward .reward-box {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-    justify-content: space-around
-}
-
-.page-reward .reward-p {
-    color: #fff;
-    font-weight: 700;
-    text-shadow: 1px 1px 1px #45b9e0
-}
-
-.page-reward .reward-p .icon {
-    margin: 0 10px;
-    color: #ddd
-}
-
-.page-reward .reward-type {
-    font-size: 16px;
-    display: block;
-    color: #4d4d4d;
-    margin: 20px 0 0
-}
-
-.page-reward .reward-img {
-    width: 130px;
-    height: 130px;
-    border: 6px solid #fff;
-    border-radius: 3px
-}
-
-.tooltip-top .tooltip {
-    display: inline;
-    position: relative;
-    z-index: 999
-}
-
-.tooltip-top .tooltip:after {
-    content: "";
+.reward .reward-code {
     position: absolute;
-    width: 100%;
-    height: 20px;
-    bottom: 100%;
+    top: -210px;
     left: 50%;
-    pointer-events: none;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+    display: none;
+    width: 350px;
+    height: 200px;
+    margin-left: -175px;
+    border: 1px solid #e6e6e6;
+    background: #fff;
+    box-shadow: 0 1px 1px 1px #efefef
 }
 
-.tooltip-top .tooltip:hover:after {
-    pointer-events: auto
-}
-
-.tooltip-top .tooltip-content {
-    position: absolute;
-    z-index: 9999;
-    width: 370px;
-    left: 50%;
-    bottom: 100%;
-    font-size: 20px;
-    line-height: 1.4;
-    text-align: center;
-    font-weight: 400;
-    color: #4d4d4d;
-    background: transparent;
-    opacity: 0;
-    margin: 0 0 -10px -185px;
-    cursor: default;
-    pointer-events: none;
-    font-family: Satisfy, cursive;
-    -webkit-font-smoothing: antialiased;
-    transition: opacity .3s .3s;
-    padding-bottom: 80px
-}
-
-.tooltip-top .tooltip:hover .tooltip-content {
-    opacity: 1;
-    pointer-events: auto;
-    transition-delay: 0s
-}
-
-.tooltip-top .tooltip-content span {
+.reward .reward-button:hover .reward-code {
     display: block
 }
 
-.tooltip-top .tooltip-text {
-    border-bottom: 10px solid #4d4d4d;
-    overflow: hidden;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    transition: -webkit-transform .3s .3s;
-    transition: transform .3s .3s;
-    transition: transform .3s .3s, -webkit-transform .3s .3s
-}
-
-.tooltip-top .tooltip:hover .tooltip-text {
-    transition-delay: 0s;
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1)
-}
-
-.tooltip-top .tooltip-inner {
-    background: rgba(36, 193, 246, .9);
-    padding: 40px;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-    webkit-transition: -webkit-transform .3s;
-    transition: -webkit-transform .3s;
-    transition: transform .3s;
-    transition: transform .3s, -webkit-transform .3s
-}
-
-.tooltip-top .tooltip:hover .tooltip-inner {
-    transition-delay: .3s;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0)
-}
-
-.tooltip-top .tooltip-content:after {
-    content: "";
-    left: 50%;
-    border: solid transparent;
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-color: transparent;
-    border-top-color: #4d4d4d;
-    border-width: 10px;
-    margin-left: -10px
+.reward .reward-code img {
+    display: inline-block;
+    float: left;
+    margin: 0 auto;
+    border: 0
 }
