--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,16 +12,18 @@ layout: default
     {{ content }}
   </div>
 
+  {% include tags.html %}
+
   <div class="reward plxiaoshi" style="margin-top:200px;">
 	<div class="reward-button">
-		<img class="aligncenter size-medium box-hide box-show" src="/images/shang.png">
+		<img class="aligncenter size-medium box-hide box-show" src="/images/shang.png" width="80px" height="80px">
 		<span class="reward-code"><img src="/images/dashangerweima.jpg"></span>
 	</div>
 	<p class="reward-notice">
-		如果文章对你有帮助，请赞赏支持懿古今发展！
+		如果文章对你有帮助，请博主喝杯咖啡吧！
 	</p>
  </div>
 
-  {% include tags.html %}
+  
 
 </article>
