--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,12 +14,12 @@ layout: default
 
   {% include tags.html %}
 
-  <div class="reward plxiaoshi" style="margin:100px 0px;">
+  <div class="reward plxiaoshi" style="margin:50px 0px;">
 	<div class="reward-button">
 		<img class="aligncenter size-medium box-hide box-show" src="/images/shang.png" width="60px" height="60px">
-		<span class="reward-code"><img src="/images/dashangerweima.jpg"></span>
+		<span class="reward-code"><img src="/images/pay.png" width="440px" height="250px"></span>
 	</div>
-	<p class="reward-notice">
+	<p class="reward-notice" style="color:#F44336>
 		如果文章对你有帮助，请博主喝杯咖啡吧！
 	</p>
  </div>
