新增搜索框

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,11 @@
 
     {% include header.html %}
 
+	<div id="搜索区">
+      <input type="text" id="搜索输入" placeholder="搜索...">
+      <ul id="搜索结果"></ul>
+    </div>
+
 
     <!-- main articles -->
     {{ content }}
@@ -18,6 +23,20 @@
 </div>
 
     {% include footer.html %}
+
+
+	<script>
+      window.simpleJekyllSearch = new SimpleJekyllSearch({
+        searchInput: document.getElementById('搜索输入'),
+        resultsContainer: document.getElementById('搜索结果'),
+        json: '{{ site.baseurl }}/全文索引.json',
+        searchResultTemplate: '<li><a href="{url}?query={query}" title="{desc}">{title}</a></li>',
+        noResultsText: '未找到相关文章',
+        limit: 100,
+        fuzzy: false,
+        exclude: ['Welcome']
+      })
+    </script>
 
   </body>
 
