--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
     {% include footer.html %}
 
-
+	<script src="{{ site.baseurl }}/js/simple-jekyll-search.min.js"></script>
 	<script>
       window.simpleJekyllSearch = new SimpleJekyllSearch({
         searchInput: document.getElementById('搜索输入'),
