--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,7 @@
 	</div>
 	</div>
 </footer>
+<script src="{{ "/css/prism.js" | prepend: site.baseurl }}"></script>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 
