--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 align="center" class="post-title" itemprop="name headline">{{ page.title }}</h1>
+    <h1 align="center" class="post-title" itemprop="name headline"  style="font-size:28px;">{{ page.title }}</h1>
     <h4 class="text-right"><small><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%F" }}</time></small></h4>
   </header>
 
