--- a/css/renge.css
+++ b/css/renge.css
@@ -17,7 +17,6 @@
 }
 
 .markdown-tag {
-  background:#F2F2F2;
-  color:#F44336;
-  padding:10px;
+  color: #c7254e;
+  background-color: #f2f2f2;
 }
