--- a/css/prism.css
+++ b/css/prism.css
@@ -43,6 +43,12 @@ pre[class*="language-"] {
 	background: #272822;
 }
 
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+	color: #c7254e;
+    background-color: #f2f2f2;
+}
+
 /* Inline code */
 :not(pre) > code[class*="language-"] {
 	padding: .1em;
