--- a/css/renge.css
+++ b/css/renge.css
@@ -19,4 +19,7 @@
 .markdown-tag {
   color: #c7254e;
   background-color: #f2f2f2;
+  padding: .1em;
+  border-radius: .3em;
+  white-space: normal;
 }
