--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,17 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
   <script async="" src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+  <style>
+	  table{
+		border-left:1px solid #000000;border-top:1px solid #000000;
+		width: 100%;
+		word-wrap:break-word; word-break:break-all;
+	  }
+	  table th{
+	  text-align:center;
+	  }
+	  table th,td{
+		border-right:1px solid #000000;border-bottom:1px solid #000000;
+	  }
+</style>
 </head>
