修改表格样式

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,15 +18,27 @@
   <script async="" src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <style>
 	  table{
-		border-left:1px solid #000000;border-top:1px solid #000000;
+		border-left:1px solid #DDDDDD;
+		border-top:1px solid #DDDDDD;
 		width: 100%;
-		word-wrap:break-word; word-break:break-all;
+		word-wrap:break-word; 
+		word-break:break-all;
 	  }
 	  table th{
-	  text-align:center;
+		text-align:center;
 	  }
 	  table th,td{
-		border-right:1px solid #000000;border-bottom:1px solid #000000;
+		border-right:1px solid #DDDDDD;
+		border-bottom:1px solid #DDDDDD;
+		padding-left:10px;
+		color:#2C3E50
+	  }
+
+	  table tr:nth-child(odd) {/*奇数行*/               
+		background: #F4F4F4;
+	  }          
+	  table td:nth-child(even) {/*偶数列*/              
+		color: #C00;
 	  }
 </style>
 </head>
