--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,10 +34,10 @@
 		color:#2C3E50
 	  }
 
-	  table tr:nth-child(odd) {/*奇数行*/               
+	  table tr:nth-child(odd) {             
 		background: #F4F4F4;
 	  }          
-	  table td:nth-child(even) {/*偶数列*/              
+	  table td:nth-child(even) {           
 		color: #C00;
 	  }
 </style>
