--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,14 +31,13 @@
 		border-right:1px solid #DDDDDD;
 		border-bottom:1px solid #DDDDDD;
 		padding-left:10px;
-		color:#2C3E50
+		color:#2C3E50;
+		line-height:25px;
 	  }
 
 	  table tr:nth-child(odd) {             
 		background: #F4F4F4;
 	  }          
-	  table td:nth-child(even) {           
-		color: #C00;
-	  }
+	  
 </style>
 </head>
