--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,20 +24,30 @@
 		word-wrap:break-word; 
 		word-break:break-all;
 	  }
+
 	  table th{
 		text-align:center;
 	  }
+
 	  table th,td{
 		border-right:1px solid #DDDDDD;
 		border-bottom:1px solid #DDDDDD;
 		padding-left:10px;
 		color:#2C3E50;
-		line-height:25px;
+		line-height:35px;
 	  }
 
 	  table tr:nth-child(odd) {             
 		background: #F4F4F4;
-	  }          
+	  }
+
+	  table tr:nth-child(even) {
+	  	background: #F9F9F5;
+	  }
+	  
+	  thead tr{
+		background: #F9F9F5;
+	  }
 	  
 </style>
 </head>
