--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,11 +42,11 @@
 	  }
 
 	  table tr:nth-child(even) {
-	  	background: #F9F9F5;
+	  	background: #FFFFFF;
 	  }
 	  
 	  thead tr{
-		background: #F9F9F5;
+		background: #FFFFFF;
 	  }
 	  
 </style>
