--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,16 +37,8 @@
 		line-height:35px;
 	  }
 
-	  table tr:nth-child(odd) {             
+	  tbody tr:nth-child(odd) {             
 		background: #F4F4F4;
-	  }
-
-	  table tr:nth-child(even) {
-	  	background: #FFFFFF;
-	  }
-	  
-	  thead tr{
-		background: #FFFFFF;
 	  }
 	  
 </style>
