--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="{{ "/css/shang.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ "/css/prism.css" | prepend: site.baseurl }}">
+  <!--gitalk-->
+  <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <!--[if lt IE 9]>
@@ -16,6 +18,8 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
   <script async="" src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+  <!--gitalk-->
+  <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
   <style>
 	  table{
 		border-left:1px solid #DDDDDD;
