--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,25 @@ layout: default
 	</p>
  </div>
 
+
+ <!--评论区-->
+ <div id="gitalk-container"></div>
+
+ <script type="text/javascript">
+
+ 	const gitalk = new Gitalk({
+	  clientID: '4c1d2fc43c7dd308593a',
+	  clientSecret: '793d56faad087ad77a419c15649aba77f8829277',
+	  repo: '评论内容',      // The repository of store comments,
+	  owner: 'chaojunma',
+	  admin: ['chaojunma'],
+	  id: location.pathname,      // Ensure uniqueness and length less than 50
+	  distractionFreeMode: false  // Facebook-like distraction free mode
+	})
+
+	gitalk.render('gitalk-container')
+
+ </script>
   
 
 </article>
