--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: default
  	const gitalk = new Gitalk({
 	  clientID: '4c1d2fc43c7dd308593a',
 	  clientSecret: '793d56faad087ad77a419c15649aba77f8829277',
-	  repo: '评论内容',      // The repository of store comments,
+	  repo: 'blog-comments',      // The repository of store comments,
 	  owner: 'chaojunma',
 	  admin: ['chaojunma'],
 	  id: location.pathname,      // Ensure uniqueness and length less than 50
