--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@ layout: default
 	  repo: 'blog-comments',      // The repository of store comments,
 	  owner: 'chaojunma',
 	  admin: ['chaojunma'],
-	  id: location.pathname,      // Ensure uniqueness and length less than 50
+	  id: decodeURI('{{ page.url }}'),      // Ensure uniqueness and length less than 50
 	  distractionFreeMode: false  // Facebook-like distraction free mode
 	})
 
