--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
   <script async="" src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <!--gitalk-->
   <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
+  <script src="{{ "/js/md5.min.js" | prepend: site.baseurl }}"></script>
   <style>
 	  table{
 		border-left:1px solid #DDDDDD;
