--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="stylesheet" href="{{ "/css/shang.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ "/css/prism.css" | prepend: site.baseurl }}">
+  <!--<link rel="stylesheet" href="{{ "/css/prism.css" | prepend: site.baseurl }}">-->
   <!--gitalk-->
   <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
