--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
     <h4 class="text-right"><small><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%F" }}</time></small></h4>
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <div class="post-content" itemprop="articleBody" style="line-height:25px;">
     {{ content }}
   </div>
 
