--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
 	</div>
 </footer>
 <script src="{{ "/js/prism.js" | prepend: site.baseurl }}"></script>
-<script src="https://code.jquery.com/jquery.js"></script>
+<script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <!--
 <script type="text/javascript">
