--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,5 +47,36 @@
 		background: #F4F4F4;
 	  }
 	  
+
+	  .img {
+		padding: 1px 1px 0;
+		height: 124px;
+		width: 223px;
+		position: relative;
+		*display: inline;
+	  }
+
+
+	  .pic .imgPic {
+			width: 223px;
+			height: 124px;
+			transition: all 1s ease 0s;
+	   }
+
+
+	  .tit {
+		color: #333;
+		padding: 0 5px;
+		position: relative;
+		margin-top: 5px;
+		height: 1.4em;
+		}
+
+		.f-thide {
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			-ms-text-overflow: ellipsis;
+		}
 </style>
 </head>
