--- a/_includes/head.html
+++ b/_includes/head.html
@@ -72,6 +72,11 @@
 		height: 1.4em;
 		}
 
+	   .tit h3 {
+		line-height: 1.4;
+		font-size: 14px;
+		}
+
 		.f-thide {
 			overflow: hidden;
 			text-overflow: ellipsis;
