--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,8 +54,13 @@
 		width: 223px;
 		position: relative;
 		*display: inline;
+		text-align:center;
+		line-height:35px;
 	  }
-
+		
+	 .img a:hover {
+	  text-decoration: none;
+	 }
 
 	  .pic .imgPic {
 			width: 223px;
