--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,9 +53,11 @@
 		height: 124px;
 		width: 223px;
 		position: relative;
-		*display: inline;
+		display: inline;
 		text-align:center;
 		line-height:35px;
+		float:left;
+		list-style£ºnone;
 	  }
 		
 	 .img a:hover {
