--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,6 +58,7 @@
 		line-height:35px;
 		float:left;
 		list-style:none;
+		margin-right: 20px;
 	  }
 		
 	 .img a:hover {
@@ -77,18 +78,6 @@
 		position: relative;
 		margin-top: 5px;
 		height: 1.4em;
-		}
-
-	   .tit h3 {
-		line-height: 1.4;
-		font-size: 14px;
-		}
-
-		.f-thide {
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-			-ms-text-overflow: ellipsis;
 		}
 </style>
 </head>
