--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,7 +58,7 @@
 		line-height:35px;
 		float:left;
 		list-style:none;
-		margin-right: 20px;
+		margin-r: 20px;
 	  }
 		
 	 .img a:hover {
@@ -78,6 +78,13 @@
 		position: relative;
 		margin-top: 5px;
 		height: 1.4em;
+		}
+
+	   .f-thide {
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			-ms-text-overflow: ellipsis;
 		}
 </style>
 </head>
