--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,7 +65,7 @@
 	  text-decoration: none;
 	 }
 
-	  .pic .imgPic {
+	  .img .imgPic {
 			width: 223px;
 			height: 124px;
 			transition: all 1s ease 0s;
