--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,6 +59,7 @@
 		float:left;
 		list-style:none;
 		margin-right: 20px;
+		margin-top: 50px;
 	  }
 		
 	 .img a:hover {
@@ -81,11 +82,5 @@
 		height: 1.4em;
 		}
 
-	   .f-thide {
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-			-ms-text-overflow: ellipsis;
-		}
 </style>
 </head>
