--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
             <div class="navbar-header navbar-left">
               <a class="nav navbar-brand" href="/">首页</a>
               <a class="nav navbar-brand" href="/about">关于</a>
-			  <a class="nav navbar-brand" href="/video">视频课程</a>
+			  <a class="nav navbar-brand" href="/video">课程</a>
 
               &nbsp;&nbsp;&nbsp;
             </div>
