--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
             </h3>
           </div>
           <div class="col-xs-2 span3 text-center">
-            <img alt="Renge" height="60" src="/images/Header.jpg" class="img-circle miaopasi" /></div>
+            <img alt="Mark" height="60" src="/images/Header.jpg" class="img-circle miaopasi" /></div>
         </div>
       </div>
       <div class="row-fluid">
