--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
 <script src="{{ "/js/prism.js" | prepend: site.baseurl }}"></script>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
-<script src="/js/tctip-1.0.4.js"></script>
+<script src="/js/tctip-1.0.4.min.js"></script>
 <script type="text/javascript">
    // $('pre').addClass("line-numbers").css("white-space", "pre-wrap");
    new tctip({
