--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,27 +21,11 @@
 <script src="{{ "/js/prism.js" | prepend: site.baseurl }}"></script>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
-<script src="/js/tctip-1.0.4.min.js"></script>
+<!--
 <script type="text/javascript">
-   // $('pre').addClass("line-numbers").css("white-space", "pre-wrap");
-   new tctip({
-    top: '20%',
-    button: {
-      id: 9,
-      type: 'zanzhu'
-    },
-    list: [
-      {
-        type: 'alipay',
-        qrImg: './images/alipay.jpg'
-      }, {
-        type: 'wechat',
-        qrImg: './images/wechat.jpg'
-      }
-    ]
-  }).init()
+  $('pre').addClass("line-numbers").css("white-space", "pre-wrap");
 </script>
-
+-->
 <div class="cb-search-tool" style="position: fixed; top: 0px ; bottom: 0px; left: 0px; right:  0px;
       opacity: 0.95; background-color: #111111; z-index: 9999; display: none;">
     <input type="text" class="form-control cb-search-content" id="cb-search-content" style="position: fixed; top: 60px" placeholder="文章标题 日期 标签" >
