--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,25 @@
   <!--gitalk-->
   <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
   <script src="{{ "/js/md5.min.js" | prepend: site.baseurl }}"></script>
+  <script src="/js/tctip-1.0.4.min.js"></script>
+  <script type="text/javascript">
+	   new tctip({
+		top: '20%',
+		button: {
+		  id: 9,
+		  type: 'zanzhu'
+		},
+		list: [
+		  {
+			type: 'alipay',
+			qrImg: './images/alipay.jpg'
+		  }, {
+			type: 'wechat',
+			qrImg: './images/wechat.jpg'
+		  }
+		]
+	  }).init()
+  </script>
   <style>
 	  table{
 		border-left:1px solid #DDDDDD;
