--- a/_includes/sider.html
+++ b/_includes/sider.html
@@ -1,24 +1,3 @@
-<script src="/js/tctip-1.0.4.min.js"></script>
-<script type="text/javascript">
-	   new tctip({
-		top: '20%',
-		button: {
-		  id: 9,
-		  type: 'zanzhu'
-		},
-		list: [
-		  {
-			type: 'alipay',
-			qrImg: './images/alipay.jpg'
-		  }, {
-			type: 'wechat',
-			qrImg: './images/wechat.jpg'
-		  }
-		]
-	  }).init()
-</script>
-
-
 <div class="col-xs-2 span3">
   <ul class="nav nav-list">
 <hr>
@@ -47,3 +26,22 @@
 	 </ul>
 </div>
 
+<script src="/js/tctip-1.0.4.min.js"></script>
+<script type="text/javascript">
+	   new tctip({
+		top: '20%',
+		button: {
+		  id: 9,
+		  type: 'zanzhu'
+		},
+		list: [
+		  {
+			type: 'alipay',
+			qrImg: '/images/alipay.jpg'
+		  }, {
+			type: 'wechat',
+			qrImg: '/images/wechat.jpg'
+		  }
+		]
+	  }).init()
+</script>
