--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
-  <script src="/js/tctip-1.0.4.min.js"></script>
+  <script src="/js/tctip-1.0.2.js"></script>
   <script async="" src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <!--gitalk-->
   <script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
