--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,8 +49,8 @@
 	   new tctip({
 		top: '20%',
 		button: {
-		  id: 9,
-		  type: 'zanzhu'
+		  id: 1,
+		  type: 'dashang'
 		},
 		list: [
 		  {
